# lower_graph

./: .clang-format  .gitignore  ADJ6toCSR4.go  Adj6ToEL32.sh  Adj6ToGCSR-lt-reorder.sh  Adj6ToGCSR.sh  CMakeLists.txt  LICENSE  README.md  RMAT31-x94-24-lt-quad-31-output.txt  Welcome file.md  convrun.sh  log-GCSR-Reorder2-Quad.txt  log-GCSR-Reorder2-Quad.txt.bak  log.txt  log2.txt  meta.json  result.csv  result.txt  script.go  smake.sh  temp.sh  test.sh  testscript.go  testscript2.go
export/: CMakeLists.txt  GridCSR.h  convrun.sh  main.h
export/Phase2/: CMakeLists.txt
export/Phase3/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  arg-kv-parser.h  common.h  cudaMemory.cuh  memory.cuh  meta.h
src/Adj6ToCSR/Phase1/: CMakeLists.txt
src/Adj6ToCSR/Phase2/: CMakeLists.txt
src/Adj6ToCSR/Phase3/: CMakeLists.txt
src/Adj6ToEL32/: CMakeLists.txt  main.cpp  main.h  stage.h  stage1.cpp  stage2.cpp  type.h  util.cpp
src/Adj6ToEL32/Deprecated/: phase1.cpp
src/Adj6ToEL32/Phase1/: CMakeLists.txt  main.go
src/Adj6ToEL32/Phase2/: CMakeLists.txt  main.cpp
src/Adj6ToGCSR/: CMakeLists.txt  main.cpp  stage0.cpp  stage1.cpp  stage2.cpp  type.h
src/Adj6ToGCSR-Quad/: CMakeLists.txt  main.cpp  stage.h  stage2.cpp  stage3.cpp  stage4.cpp  type.h  util.cpp  util.h
src/Adj6ToGCSR-QuadShard/: CMakeLists.txt  stage1b.cpp  stage2.cpp  util.cpp
src/Adj6ToGCSR-Shard/: main.cpp  stage.h  stage1.cpp
src/Adj6ToGCSR-lt/: main.h
src/Adj6ToGCSR-lt-reorder/: CMakeLists.txt
src/Adj6ToGCSR-lt-reorder/Phase0/: CMakeLists.txt  main.go
src/Adj6ToGCSR-lt-reorder/Phase1/: main.go
src/Adj6ToGCSR-lt-reorder/Phase2/: main.cpp
src/Adj6ToGCSR-lt-reorder/Phase3/: CMakeLists.txt
src/Adj6ToGCSR-lt-reorder2 (under construction)/: CMakeLists.txt  common.go  go.mod  main.go  stage0.go  stage1.go  stage2.go  type.go  util.go
src/Adj6ToGCSR-lt/Phase1/: CMakeLists.txt
src/Adj6ToGCSR-lt/Phase2/: CMakeLists.txt  main.cpp
src/Adj6ToGCSR-lt/Phase3/: CMakeLists.txt  main.cpp
src/BuddySystem/: BuddySystem.cpp  CMakeLists.txt  buddy_system.cpp
src/Converter/: Insert.cpp  LoadTSV.cpp  RemoveDegreeBased.cpp  RemoveDuplicated.cpp
src/GoTest/: main.go
src/GridCSR/: CMakeLists.txt  main.cpp
src/IntrinsicTest/: CMakeLists.txt  main.cpp  main.h
src/NewConverter/: main.go  main.go.older  support.go
src/NewConverterCPP/: CMakeLists.txt  main.cpp  main.h  phase1.cpp  phase2.cpp  phase3.cpp  util.cpp  wg.h
src/NewConverterGo/: CMakeLists.txt  common.go  go.mod  main.go  phase0.go  phase1.go  type.go
src/Old-Converter/: CMakeLists.txt  Converter.h  InsertUndirected.cpp  StoreGCSR.cpp
src/ReadTestCPP/: main.cpp  phase1.cpp  util.cpp
src/TriangleCounting/: CMakeLists.txt
src/TriangleCounting/DegreeBased/: CMakeLists.txt
src/TriangleCounting/LowerTriangular/: CMakeLists.txt
src/TriangleCounting/LowerTriangular/BinarySearch/: CMakeLists.txt
src/TriangleCounting/LowerTriangular/BitArray/: CMakeLists.txt
src/__oldCode/: Adj6ToGCSR-lt-relabel.sh
src/__oldCode/Adj6ToGCSR-Shard/: CMakeLists.txt  main.cpp  stage.h  stage0.cpp  util.h
src/__oldCode/Adj6ToGCSR-lt/: CMakeLists.txt
src/__oldCode/Adj6ToGCSR-lt-relabel/Phase0/: CMakeLists.txt  main.go
src/__oldCode/IntrinsicTest/: main.cpp
src/__oldCode/Manual-no-meta-stream-adaptive/: CMakeLists.txt  ExecutionManager.cuh  ScheduleManager.cu  main.cu
src/__oldCode/Manual-no-meta-stream-shard/: CMakeLists.txt  ExecutionManager.cu  ExecutionManager.cuh  ScheduleManager.cu  main.cu  type.cuh  util.cu
src/__oldCode/NVLink (deprecated)/: main-managed.cu  main.cu  main.cuh
src/__oldCode/Old-Converter/: GenGCSR.cpp  InsertLowerTriangular.cpp  InsertUndirectedDegree.cpp  LoadADJ6.cpp  main.cpp
src/__oldCode/ReadTestCPP/: CMakeLists.txt  main.h
src/__oldCode/TC/: CMakeLists.txt  context.cpp  context.h  data.cpp  data.h  exec.cu  exec.h  exec_kernel.cu  main.cpp  sched.cpp  sched.h  type.h  util.cpp  util.h
src/__oldCode/TC-BinarySearch-Manual/: DataManager.cu  ScheduleManager.cu  main.cu
src/__oldCode/TC-BinarySearch-Original/: CMakeLists.txt  device-setting.cu  device-setting.cuh
src/__oldCode/TC-BitArray-Original/: CMakeLists.txt  device-setting.cu  device-setting.cuh  launch.cu
src/__oldCode/UnifiedMemory (deprecated)/: device-memory.cuh  device-setting.cuh  tc.h
src/_deprecated_SubGrid/: CMakeLists.txt  csr.cpp  csr.h  file.h  main.cpp  parallel.cpp  parallel.h  string.cpp  string.h  type.h
src/converter/: converter-gen-gcsr.cpp  converter-insert-lower-triangle.cpp  converter-insert-undirected-degree.cpp  converter-insert-undirected.cpp  converter-insert.cpp  converter-load-adj6.cpp  converter-load-tsv.cpp  converter-remove-degree-based.cpp  converter-remove-duplicated.cpp  converter-store-gcsr.cpp  converter.h  main.cpp
src/converter-lt/: converter-divide-edges.cpp  converter-load-adj6.cpp  converter-load-tsv.cpp
src/converter/adj6-gcsr/: main.cpp
src/converter/tsv-gcsr/: main.cpp
src/dataformat/: adj6-edgelist.cpp  edgelist-gcsr.cpp  gcsr-read.cpp  tsv-edgelist.cpp
src/inspect/: main.cu
src/inspect2/: main.cu
src/memory-manager-test/: main.cu
src/meta/: meta.cpp
src/newconverter/: converter-run.cpp  converter-write.cpp  converter.cpp  converter.h  main.cpp
src/p2ptest/: main.cu
src/query-tc/: common.h  launch.cu  main.cpp
src/query/tc/: common.h  launch.cu  main.cpp
src/triangle-deg-bst/: device-setting.cu  device-setting.cuh  launch.cu
src/triangle-lt/: device-setting.cu  device-setting.cuh  launch.cu  main.cpp
src/triangle-lt-bst/: device-setting.cu  launch.cu
src/triangle-lt-bst-manual/: kernel.cu  main-device.cu  main-managed.cu  main.cu  main.cuh
src/triangle-lt-bst-nvlink/: main.cu  main.cuh
src/triangle-lt-bst-unified/: device-setting.cu  main.cpp
src/triangle-lt-bst-unified2/: main-device.cu  main-managed.cu  main.cu  main.cuh
src/triangle-lt-bst-unifiedmem/: device-setting.cuh  launch.cu
src/triangle-lt-bst-unifiedmem-v2/: device-memory.cuh  device-setting.cu  device-setting.cuh  launch.cu  main.cpp  tc.h
src/triangle-new/: device-setting.cu  launch.cu  main.cpp
(+232 files in other folders)
