#set(outFileName TriangleCounting-LowerTriangular-BinarySearch-Manual)
#file(GLOB_RECURSE files ${CMAKE_CURRENT_SOURCE_DIR}/*)
#cuda_add_executable(${outFileName} ${files})
#add_executable(${outFileName} ${files})
#add_dependencies(${outFileName} GridCSR)
#target_link_libraries(${outFileName} pthread stdc++fs GridCSR BuddySystem)